remove RSS icons from views, fix term page display issue, fix homepage tile layout issue

--- a/sass/_bootstrap-variables.scss
+++ b/sass/_bootstrap-variables.scss
@@ -77,11 +77,11 @@ $headings-color:          inherit;
 // [converter] If $bootstrap-sass-asset-helper if used, provide path relative to the assets load path.
 // [converter] This is because some asset helpers, such as Sprockets, do not work with file-relative paths.
 // $icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/bootstrap/")
-$icon-font-path: "../fonts/icons/";
+$icon-font-path: "./";
 
 //** File name for all font files.
 // $icon-font-name:          "glyphicons-halflings-regular"
-$icon-font-name:          "ausgov";
+$icon-font-name:          "datagov-icons";
 
 //** Element ID within SVG icon file.
 // $icon-font-svg-id:        "glyphicons_halflingsregular"
